// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Comment /> should match a snapshot with a complex bottom notes 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <div
      className="marger__StyledMarger-q3lecu-0 gkLTfi"
    >
      <span
        className="k-ButtonImage k-ButtonImage--huge k-ButtonImage--withoutPointerEvents"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-light"
    >
      Custom date
    </span>
  </div>
  <div
    className="rmq-993edb07"
    data-radium={true}
    style={
      Object {
        "marginLeft": 20,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#f6f6f6",
          "borderWidth": 2,
          "color": "#222",
          "fontSize": 16,
          "padding": 30,
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 gkLTfi"
      >
        <span
          className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
        >
          Custom name
        </span>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 WSKaG"
      >
        <span
          className="k-u-color-font1 k-u-size-default k-u-weight-light"
        >
          Custom text
        </span>
      </div>
      <span
        className="rmq-e4f3f344"
        data-radium={true}
        style={
          Object {
            "borderColor": "transparent",
            "borderRightColor": "#f6f6f6",
            "borderStyle": "solid",
            "borderWidth": 10,
            "display": "block",
            "height": 0,
            "left": -20,
            "position": "absolute",
            "top": 20,
            "width": 0,
          }
        }
      />
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "@media (min-width: 640px){ .rmq-e4f3f344{top: 35px !important;}}",
          }
        }
      />
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 gWrqvV"
    >
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-bold"
        data-radium={true}
        style={
          Object {
            "paddingLeft": 30,
          }
        }
      >
        <div>
          <a
            href="#"
            style={
              Object {
                "color": "#000",
              }
            }
          >
            Delete this comment
          </a>
          <a
            href="#"
            style={
              Object {
                "color": "#000",
              }
            }
          >
            Notify abuse
          </a>
        </div>
      </p>
    </div>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "@media (min-width: 640px){ .rmq-993edb07{margin-left: 35px !important;}}",
        }
      }
    />
  </div>
</div>
`;

exports[`<Comment /> should match its empty snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <div
      className="marger__StyledMarger-q3lecu-0 gkLTfi"
    >
      <span
        className="k-ButtonImage k-ButtonImage--huge k-ButtonImage--withoutPointerEvents"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-light"
    >
      Custom date
    </span>
  </div>
  <div
    className="rmq-993edb07"
    data-radium={true}
    style={
      Object {
        "marginLeft": 20,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#f6f6f6",
          "borderWidth": 2,
          "color": "#222",
          "fontSize": 16,
          "padding": 30,
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 gkLTfi"
      >
        <span
          className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
        >
          Custom name
        </span>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 WSKaG"
      >
        <span
          className="k-u-color-font1 k-u-size-default k-u-weight-light"
        >
          Custom text
        </span>
      </div>
      <span
        className="rmq-e4f3f344"
        data-radium={true}
        style={
          Object {
            "borderColor": "transparent",
            "borderRightColor": "#f6f6f6",
            "borderStyle": "solid",
            "borderWidth": 10,
            "display": "block",
            "height": 0,
            "left": -20,
            "position": "absolute",
            "top": 20,
            "width": 0,
          }
        }
      />
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "@media (min-width: 640px){ .rmq-e4f3f344{top: 35px !important;}}",
          }
        }
      />
    </div>
    
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "@media (min-width: 640px){ .rmq-993edb07{margin-left: 35px !important;}}",
        }
      }
    />
  </div>
</div>
`;
